--- a/config/waybar/leftbar/style.css
+++ b/config/waybar/leftbar/style.css
@@ -7,25 +7,27 @@
 
 #custom-notification {
   font-family: "JetBrains Mono Nerd Font";
-  font-size: 17px;
- color: #A1BDCE;
- margin: 2px 0px 0px 0px;
+  font-size: 18px;
+ color: #cccedb;
+ margin-left: -2px;
+ margin-top: -4px ;
+ padding-bottom: 12px;
 }
 
 window#waybar {
-  /*background: rgba(23, 23, 23, 0.63);*/
-  background: #0F0F17;
+    background: rgba(21, 21, 21, 0.83); 
+/*background: transparent;*/
   /*  border-radius: 15px; */
  /*  border: 2px solid #124323; */
 /* border: 0px solid #A1BDCE; */
- border: 3px solid rgba(255, 255, 255, 0.1);
- border-radius: 10px;
+ border: 3px solid rgba(255, 255, 255, 0.3);
+ border-radius: 6px;
 }
 
 
 tooltip {
-        background: #171717;
-        color: #A1BDCE;
+        background: #1D2021;
+        color: #FBF1C7;
         font-size: 13px;
         border-radius: 7px;
        border: 2px solid #101a24;
@@ -33,8 +35,9 @@ tooltip {
 
     }
 #workspaces{
+font-weight: normal;
 background: rgba(23, 23, 23, 0.0);
-    color: #888789;
+    color: #2F302D;
     box-shadow: none;
 	text-shadow: none;
     border-radius: 9px;
@@ -46,14 +49,17 @@ background: rgba(23, 23, 23, 0.0);
 
 
 #workspaces button {
+font-weight: normal;
 background: rgba(23, 23, 23, 0.0);
-    color: #A1BDCE;
+    color: #B1B2BD;
     box-shadow: none;
 	text-shadow: none;
     border-radius: 9px;
     transition: 0.2s ease;
-    padding-left: 4px;
+    padding-left: 0px;
     padding-right: 4px;
+    margin-right: -4px;
+    margin-top: -10px;
  /*   animation: ws_normal 20s ease-in-out 1; */
 }
 
@@ -63,16 +69,18 @@ background: rgba(23, 23, 23, 0.0);
 
  
   /* background-image: url("/home/anik/Documents/bar1.png");*/
-    color: #A1BDCE;   
+    color: #cccedb;   
+    font-weight: normal;
     transition: all 0.3s ease;
-    padding-left: 4px;
+      padding-left: 0px;
     padding-right: 4px;
   /*  transition: all 0.4s cubic-bezier(.55,0.68,.48,1.682); */
 }
 
 #workspaces button:hover {
     background: none;
-    color: #72D792;
+    color: #7DAEA3;
+    font-weight: normal;
     animation: ws_hover 20s ease-in-out 1;
     transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
 }
@@ -83,30 +91,38 @@ background: rgba(23, 23, 23, 0.0);
 	font-size: 4px;
     padding: 0px;
     border-radius: 9px;
+    margin-top: 3px;
     margin-bottom: 3px;
-    margin-left: 0px;
-    padding-left: 3px;
-    padding-right: 3px;
-    margin-right: 0px;
+    margin-left: 3px;
+    margin-right: 3px;
     color: @wb-color;
     animation: tb_normal 20s ease-in-out 1;
 }
 
 #taskbar button.active {
-    background: @wb-act-bg;
-    color: @wb-act-color;
-    margin-left: 3px;
-    padding-left: 12px;
-    padding-right: 12px;
-    margin-right: 3px;
+    background: #C8C8C8;
+    color: #C8C8C8;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
     animation: tb_active 20s ease-in-out 1;
     transition: all 0.4s cubic-bezier(.55,-0.68,.48,1.682);
-    min-height: 9px; 
+    min-height: 3px; 
+    margin-top: 3px;
+    margin-bottom: 3px;
+    border-radius: 3px;
 }
 
 #taskbar button:hover {
-    background: @wb-hvr-bg;
-    color: @wb-hvr-color;
+margin-top: 3px;
+    margin-bottom: 3px;
+      margin-left: 10px;
+    margin-right: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
+    min-height: 3px; 
+    border-radius: 3px;
     animation: tb_hover 20s ease-in-out 1;
     transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
 }
@@ -115,16 +131,17 @@ background: rgba(23, 23, 23, 0.0);
     min-height: 16px;
     font-weight: bold;
     font-size: 13px;
-    color: #9488e3;
+    color: #FBF1C7;
 }
 
 #tray menu separator {
-    min-height: 10px
+    min-height: 10px;
 }
 
 
 #custom-spacer{
 opacity: 0.0;
+padding-top: 3px;
 }
 #custom-smallspacer{
 opacity: 0.0;
@@ -148,13 +165,11 @@ background:  #161320;
     }
 
 #backlight{
-    color: #2096C0;
+    color: #cccedb;
     background: rgba(23, 23, 23, 0.0);
     font-weight: normal;
     font-size: 19px;
-    margin: 1px 0px 0px 0px;
-    padding-left: 0px;
-    padding-right: 2px;
+    margin: 0px 0px 0px -6px;
  
 }
 #bluetooth,
@@ -189,32 +204,42 @@ background: @bar-bg;
 
 }
 #clock{
-    color: #A1BDCE;
+    color: #cccedb;
     font-size: 15px;
     font-weight: 900;
-    font-family: "JetBrains Mono Nerd Font";
+    font-family: "CaskaydiaCove Nerd Font Mono";
+   /* font-family: "JetBrains Mono Nerd Font";*/
     background: rgba(23, 23, 23, 0.0);
     opacity: 1;
-    margin: 3px 0px 0px 0px;
+    margin: 3px -13px -3px -13px;
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 3px;
     border: none;
     
 }
 #pulseaudio{
 font-weight: normal;
 font-size: 18px;
-color: #6F8FDB;
+color: #cccedb;
     background:  rgba(22, 19, 32, 0.0);
     opacity: 1;
-    margin: 0px 0px 0px 0px;
-    padding-left: 3px;
-    padding-right: 3px;
+    margin-left: -0px;
 }
 #cpu{
 font-weight: normal;
 font-size: 22px;
-color: #915CAF;
+color: #cccedb;
+}
+#custom-led{
+font-size: 16px;
+font-weight: normal;
+background:  rgba(23, 23, 23, 0.5);
+padding-top: 1px;
+padding-bottom: 12px;
+margin: 7px;
+border-radius: 7px;
 }
 #custom-gpuinfo,
 #custom-keybindhint,
@@ -222,10 +247,10 @@ color: #915CAF;
 #memory{
 font-weight: normal;
 font-size: 22px;
-color: #E4C9AF;
+color: #cccedb;
 }
 #mpris{
-color: white;
+color: #cccedb;
 animation: repeat;
 	animation-name: blink;
 	animation-duration: 3s;
@@ -236,36 +261,37 @@ animation: repeat;
 
 @keyframes blink {
     to {
-        color: #4a4a4a;
+        color: #262827;
         
     }
 }
 #network{
-color: #A1BDCE;
+color: #cccedb;
 font-weight: normal;
 font-size: 19px;
-padding-right: 0px;
-padding-left: 4px
+margin-left: -2px;
 }
 #custom-notifications,
 #custom-spotify,
-#taskbar,
 #custom-theme,
 #custom-menu{
-color: #E8EDF0;
+color: #cccedb;
 background:  rgba(23, 23, 23, 0.0);
 margin: 0px 0px 0px 0px;
     padding-left: 1px;
     padding-right: 1px;
     opacity: 0.1
 }
-#tray,
+#tray{
+padding: 0px;
+}
 #custom-updates,
 #custom-wallchange,
 #custom-wbar,
 #window{
-color: #A1BDCE;
-font-family: "Martian Mono";
+font-family: "CaskaydiaCove Nerd Font Mono";
+color: #7DAEA3;
+padding-left: 5px;
 }
 #custom-l_end,
 #custom-r_end,
@@ -273,13 +299,25 @@ font-family: "Martian Mono";
 #custom-sr_end,
 #custom-rl_end,
 #cava,
+#custom-box,
 #upower#headset,
 #upower{
-color: #a6d189;
+color: #cccedb;
+/*margin: 8px 3px 3px 8px;*/
+margin: 8px;
+padding-top: 0px;
+padding-bottom: 0px;
 }
 #mpris{
-
-font-weight: bold
+font-size: 16px;
+font-weight: normal;
+	/*background: #000000;*/
+	/*margin: 4px 4px 4px 4px;*/
+background:  rgba(23, 23, 23, 0.5);
+padding-top: 6px;
+padding-bottom: 6px;
+margin: 7px;
+border-radius: 7px;
 }
 #custom-rr_end {
 font-weight: normal;
@@ -298,17 +336,17 @@ font-weight: normal;
   background: #A1BDCE;
   background-color: transparent;
   box-shadow: none;
-  margin-right: 7px;
 }
 
 #backlight-slider trough,
 #pulseaudio-slider trough {
-  margin-top: -3px;
-  min-width: 90px;
-  min-height: 10px;
+  min-width: 9px;
+  min-height: 90px;
   margin-bottom: -4px;
   border-radius: 8px;
   background: #343434;
+  margin-left: -4px;
+  margin-right: -4px;
 }
 
 #backlight-slider highlight,
@@ -329,7 +367,7 @@ font-weight: normal;
 
 
 #taskbar {
-    padding: 1px;
+    padding: 0px;
 }
 
 #custom-r_end {
